[tool.poetry]
name = "comfyui"
version = "0.1.0"
description = ""
authors = ["comfyanonymous <comfyanonymous@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
torch = "^2.0.1"
torchdiffeq = "^0.2.3"
torchsde = "^0.2.5"
einops = "^0.6.1"
aiohttp = "^3.8.5"
accelerate = "^0.21.0"
transformers = ">=4.25.1"
safetensors = ">=0.3.0"
pyyaml = "^6.0.1"
pillow = "^10.0.0"
tqdm = "^4.65.0"
scipy = "^1.11.1"
torchvision = "^0.15.2"
torchaudio = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
